// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileField/> render() should display loading when loading 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <div
      className="d-flex align-center"
    >
      <div
        className="preview"
      >
        <img
          alt="file preview"
          src="value"
        />
      </div>
      <Button
        className="label"
        color="secondary"
        disabled={true}
        tag="label"
      >
        <span>
          <i
            className="material-icons md-spin mr-2"
          >
            refresh
          </i>
          Uploading...
        </span>
        <Input
          className="input"
          disabled={true}
          id="id-input-1"
          onChange={[Function]}
          type="file"
        />
      </Button>
    </div>
  </div>
</FormGroup>
`;

exports[`<FileField/> render() should not render preview 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <div
      className="d-flex align-center"
    >
      <Button
        className="label"
        color="secondary"
        disabled={false}
        tag="label"
      >
        <span>
          Select a File...
        </span>
        <Input
          className="input"
          disabled={false}
          id="id-input-1"
          onChange={[Function]}
          previewUrl="url"
          type="file"
        />
      </Button>
    </div>
  </div>
</FormGroup>
`;

exports[`<FileField/> render() should render a basic file input 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <div
      className="d-flex align-center"
    >
      <div
        className="preview"
      >
        <img
          alt="file preview"
          src="value"
        />
      </div>
      <Button
        className="label"
        color="secondary"
        disabled={false}
        tag="label"
      >
        <span>
          Select a File...
        </span>
        <Input
          className="input"
          disabled={false}
          id="id-input-1"
          onChange={[Function]}
          type="file"
        />
      </Button>
    </div>
  </div>
</FormGroup>
`;

exports[`<FileField/> render() should render preview 1`] = `
<FormGroup
  className="InputField"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <div
      className="d-flex align-center"
    >
      <div
        className="preview"
      >
        <img
          alt="file preview"
          src="value"
        />
      </div>
      <Button
        className="label"
        color="secondary"
        disabled={false}
        tag="label"
      >
        <span>
          Select a File...
        </span>
        <Input
          className="input"
          disabled={false}
          id="id-input-1"
          onChange={[Function]}
          previewUrl="url"
          type="file"
        />
      </Button>
    </div>
  </div>
</FormGroup>
`;
